--- a/Taxolution/sidraweb/css/nav.css
+++ b/Taxolution/sidraweb/css/nav.css
@@ -124,6 +124,7 @@ nav.scrolling {
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
+  position: relative;
 }
 
 .hamburger span {
